angular-sample/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: primenum-service
spec:
  type: ClusterIP
  selector:
    app: primenum
  ports:
    - port: 80
      targetPort: 3000
