angular-sample/templates/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
  name: primenum-ingress 
spec:
  ingressClassName: nginx
  rules:
  - http:
        paths:
          - path: '/'
            pathType: Prefix 
            backend:
              service:
                name: primenum-service
                port:
                  number: 3000
